@@ -55,6 +55,7 @@ SourceFileScanner = SCons.Scanner.Scanner({}, name='SourceFileScanner')
 CSuffixes = [".c", ".C", ".cxx", ".cpp", ".c++", ".cc",
              ".h", ".H", ".hxx", ".hpp", ".hh",
              ".F", ".fpp", ".FPP",
+             ".m", ".mm",
              ".S", ".spp", ".SPP"]
 
 DSuffixes = ['.d']
